# task_challenge

./: .env.example  .flake8  .gitignore  DECISION_LOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  startup.sh  test_all_apis.sh  test_graphql_api.py  test_rest_api.py
alembic/: env.py
alembic/versions/: 20241213_001_initial_migration.py
src/application/: auth_service.py  dto.py  services.py
src/domain/: entities.py  exceptions.py
src/infrastructure/: auth.py  database.py  repositories.py
src/presentation/: config.py  dependencies.py  main.py
src/presentation/graphql/: context.py  schema.py  types.py
src/presentation/graphql/resolvers/: auth_resolvers.py  task_list_resolvers.py  task_resolvers.py
src/presentation/routers/: auth.py  task_lists.py  tasks.py
tests/: conftest.py
tests/integration/: test_auth_integration.py  test_graphql_integration.py  test_task_lists_integration.py  test_tasks_integration.py
tests/unit/: dive_task_resolvers.py  test_application_services.py  test_auth.py  test_auth_service.py  test_coverage_boost.py  test_critical_coverage.py  test_dependencies_coverage.py  test_domain.py  test_graphql_coverage.py  test_graphql_resolvers.py  test_graphql_resolvers_coverage.py  test_infrastructure.py  test_infrastructure_repositories.py  test_presentation.py  test_presentation_routers.py  test_pure_unit_tests.py  test_repositories_async.py  test_repositories_coverage.py  test_services_and_notifications.py  test_task_list_resolvers_deep.py  test_task_list_router.py  test_task_lists.py  test_task_lists_coverage.py  test_task_resolvers_deep.py  test_task_router.py  test_task_router_simple.py  test_tasks.py  test_tasks_coverage.py  test_validation_and_security.py
